--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -57,6 +57,10 @@
     <Compile Include="DataContextFactory.cs" />
     <Compile Include="IDataContext.cs" />
     <Compile Include="IDataContextFactory.cs" />
+    <Compile Include="Migrations\201502081706012_InitDatabase.cs" />
+    <Compile Include="Migrations\201502081706012_InitDatabase.Designer.cs">
+      <DependentUpon>201502081706012_InitDatabase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -69,6 +73,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201502081706012_InitDatabase.resx">
+      <DependentUpon>201502081706012_InitDatabase.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
