MZ-3 added IControllerServices to ApplicationController

--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -17,6 +17,7 @@
       <error statusCode="404" redirect="/404.html" />
       <error statusCode="500" redirect="/500.html" />
     </customErrors>
+    <anonymousIdentification enabled="true" />
     <authentication mode="Forms">
       <forms loginUrl="/Account/SignIn/" cookieless="UseCookies" />
     </authentication>
