--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -11,6 +11,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="OrangeJetpack.Services:Project.Key" value="LTdhWC" />
+    <add key="OrangeJetpack.Services:Project.Token" value="3Vjy3pndfXetYsfMkAzf" />
   </appSettings>
   <system.web>
     <customErrors mode="Off" defaultRedirect="/500.html" redirectMode="ResponseRewrite">
