--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -13,7 +13,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="OrangeJetpack.Services:Project.Key" value="LTdhWC" />
     <add key="OrangeJetpack.Services:Project.Token" value="3Vjy3pndfXetYsfMkAzf" />
-  </appSettings>
+  <add key="LocalizationLanguages" value="en" /></appSettings>
   <system.web>
     <customErrors mode="Off" defaultRedirect="/500.html" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="/404.html" />
