--- a/src/Mzayad.Models/packages.config
+++ b/src/Mzayad.Models/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="OrangeJetpack.Localization" version="1.5.6" targetFramework="net45" />
 </packages>
