--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -25,6 +25,7 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="OrangeJetpack.Base.Web" version="0.0.6" targetFramework="net45" />
   <package id="OrangeJetpack.Localization" version="1.5.6" targetFramework="net45" />
+  <package id="OrangeJetpack.Localization.Mvc" version="1.5.0" targetFramework="net451" />
   <package id="OrangeJetpack.Services.Client" version="0.0.21" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
