--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -218,6 +218,12 @@
     <Content Include="Content\site-arabic.min.css">
       <DependentUpon>site-arabic.css</DependentUpon>
     </Content>
+    <Content Include="Content\site-forms.css">
+      <DependentUpon>site-forms.less</DependentUpon>
+    </Content>
+    <Content Include="Content\site-forms.min.css">
+      <DependentUpon>site-forms.css</DependentUpon>
+    </Content>
     <Content Include="Content\site-layout.css">
       <DependentUpon>site-layout.less</DependentUpon>
     </Content>
@@ -243,6 +249,10 @@
     <Content Include="Content\site-arabic.less" />
     <Content Include="Content\site-arabic.css.map">
       <DependentUpon>site-arabic.css</DependentUpon>
+    </Content>
+    <Content Include="Content\site-forms.less" />
+    <Content Include="Content\site-forms.css.map">
+      <DependentUpon>site-forms.css</DependentUpon>
     </Content>
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
