--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -187,8 +187,11 @@
     <Compile Include="Areas\admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\admin\Controllers\ProductsController.cs" />
     <Compile Include="Areas\admin\Controllers\ReportsController.cs" />
+    <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Core\Configuration\RouteInfo.cs" />
+    <Compile Include="Core\Formatting\EnumFormatter.cs" />
+    <Compile Include="Core\Formatting\StringFormatter.cs" />
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
@@ -206,6 +209,7 @@
     <Compile Include="Core\Services\IAuthService.cs" />
     <Compile Include="Core\Services\IControllerServices.cs" />
     <Compile Include="Core\Services\ICookieService.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\HtmlExtensions.cs" />
     <Compile Include="Extensions\IdentityExtensions.cs" />
     <Compile Include="Global.asax.cs">
@@ -319,6 +323,7 @@
     <Content Include="Areas\admin\Views\Auctions\Index.cshtml" />
     <Content Include="Areas\admin\Views\Users\Index.cshtml" />
     <Content Include="Areas\admin\Views\Reports\Index.cshtml" />
+    <Content Include="Areas\admin\Views\Settings\EmailTemplates.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
@@ -386,6 +391,10 @@
     <ProjectReference Include="..\Mzayad.Models\Mzayad.Models.csproj">
       <Project>{71f89204-ebb2-438a-b56f-c0521c0bbe3c}</Project>
       <Name>Mzayad.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mzayad.Services\Mzayad.Services.csproj">
+      <Project>{402DADB1-1B34-4489-BD9E-F3E387A941C9}</Project>
+      <Name>Mzayad.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
