--- a/src/Mzayad.Web/Views/Web.config
+++ b/src/Mzayad.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Mzayad.Web" />
+        <add namespace="Mzayad.Web.Extensions" />
         <add namespace="Mzayad.Web.Resources" />
       </namespaces>
     </pages>
