MZ-2 added IAuthService.IsLocal(); added StatusMessage helpers to ApplicationController; added SignIn() post action

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -375,6 +375,7 @@
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\Account\SignIn.cshtml" />
     <Content Include="Views\Shared\_Layout_StatusMessage.cshtml" />
+    <Content Include="Views\Shared\Blank.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
