--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Address.cs" />
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="Enum\EmailTemplateType.cs" />
