--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -9,6 +9,8 @@
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net451" />
+  <package id="MaxMind.Db" version="1.0.0.0" targetFramework="net451" />
+  <package id="MaxMind.GeoIP2" version="2.1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
@@ -30,5 +32,6 @@
   <package id="OrangeJetpack.Localization.Mvc" version="1.5.0" targetFramework="net451" />
   <package id="OrangeJetpack.Services.Client" version="0.0.21" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="RestSharp" version="105.0.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
