--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -85,6 +85,10 @@
     <Compile Include="Migrations\201502151052444_IncreasePhoneFieldLength.Designer.cs">
       <DependentUpon>201502151052444_IncreasePhoneFieldLength.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502191037455_AddCategory.cs" />
+    <Compile Include="Migrations\201502191037455_AddCategory.Designer.cs">
+      <DependentUpon>201502191037455_AddCategory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -113,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502151052444_IncreasePhoneFieldLength.resx">
       <DependentUpon>201502151052444_IncreasePhoneFieldLength.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502191037455_AddCategory.resx">
+      <DependentUpon>201502191037455_AddCategory.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
